--- a/WeatherApp/weather/templates/weather/index.html
+++ b/WeatherApp/weather/templates/weather/index.html
@@ -6,7 +6,44 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Погодное приложение</h1>
+
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+        <span class="fs-4">Погодное приложение</span>
+      </a>
+
+      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+        <a class="me-3 py-2 text-dark text-decoration-none" href="#">Главная</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="#">Информация</a>
+        <a class="py-2 text-dark text-decoration-none" href="#">Документация</a>
+      </nav>
+    </div>
+
+    <div class="container">
+        <h1>Погода в Вашем городе</h1>
+        <div class="row">
+            <div class="row">
+                <div class="col-5 offset-1">
+                    <form action="">
+                        <label for="city">Город</label>
+                        <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
+                        <input type="submit" name="send" value="Добавить" class="btn btn-danger">
+                    </form>
+
+                </div>
+                <div class="col-4 offset-1">
+                    <h1>Информаиця</h1>
+                    <div class="alert alert-danger">
+                        Погода в Москве
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
 
 
 </body>
