--- a/WeatherApp/weather/templates/weather/index.html
+++ b/WeatherApp/weather/templates/weather/index.html
@@ -34,7 +34,9 @@
                 <div class="col-4 offset-1">
                     <h1>Информаиця</h1>
                     <div class="alert alert-danger">
-                        Погода в Москве
+                        <b>Город:</b> {{info.city}} <br>
+                        <b>Температура:</b> {{info.temp}} <sup>o</sup><br>
+                        <img src="http://openweathermap.org/img/w/{{info.icon}}.png" alt="Фото погоды" class="img-thumbnail">
                     </div>
                 </div>
             </div>
